--- a/EasyLearn/UI/Pages/UsersPage.xaml
+++ b/EasyLearn/UI/Pages/UsersPage.xaml
@@ -4,11 +4,12 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      xmlns:local="clr-namespace:EasyLearn.UI.Pages"
+      xmlns:validation="clr-namespace:EasyLearn.Infrastructure.Validation"
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AccountsPage">
+      Title="AccountsPage"
+      Background="GhostWhite">
 
     <materialDesign:DialogHost>
 
@@ -29,15 +30,13 @@
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
                     Margin="30"
+                    Name="addNewUserButton"
                     Style="{DynamicResource MaterialDesignFloatingActionButton}"
-                    Background="ForestGreen"
-                    BorderBrush="ForestGreen"
                     Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
 
-                <materialDesign:PackIcon Kind="AccountPlus"
+                <materialDesign:PackIcon Kind="Plus"
                                          Height="30"
-                                         Width="30"
-                                         Margin="0 0 6 2"/>
+                                         Width="30"/>
 
 
                 <Button.CommandParameter>
@@ -47,7 +46,22 @@
                         <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
                                  Width="200" 
                                  materialDesign:HintAssist.Hint="Имя пользователя"
-                                 Text="{Binding AddingWindowUserNameValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                 KeyDown="OnUserNameValueTextBoxKeyDown">
+
+                            <TextBox.Text>
+                                <Binding Path="AddingWindowUserNameValue" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                                    <Binding.ValidationRules>
+                                        <validation:InRange Group="AddNewUser" Min="1" Max="12"/>
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox.Text>
+
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="TextChanged">
+                                    <i:InvokeCommandAction Command="{Binding UpdateConfirmUserAddingButtonAvailabilityCommand}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+
                         </TextBox>
 
                         <!--Кнопки отмены и подтверждения добавления-->
@@ -57,7 +71,8 @@
                             <!--Кнопка отмены добавления нового аккаунта-->
                             <Button Style="{DynamicResource MaterialDesignFlatButton}" 
                                     Content="Отмена"
-                                    Margin="6">
+                                    Margin="6"
+                                    Name="cancelUserAddingButton">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
@@ -71,7 +86,8 @@
                                     HorizontalAlignment="Center"
                                     Content="Добавить"
                                     Margin="10"
-                                    IsEnabled="{Binding ConfirmNewUserButtonIsEnabled}">
+                                    Name="confirmUserAddingButton"
+                                    IsEnabled="{Binding ConfirmUserAddingButtonIsEnabled}">
 
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="Click">
